--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,4 @@
 <resources>
     <string name="app_name">MeterManager</string>
-    <string name="empty_not_saved">Empty</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <string name="test_branch_to_check_anton_merge_request">Yep</string>
+    <string name="locations">Locations</string>
 </resources>
