--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Менеджер счётчиков</string>
     <string name="locations">Помещения</string>
+    <string name="location_edit">Редактирование</string>
+    <string name="location_new">Новое помещение</string>
 </resources>
