--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MeterManager</string>
     <string name="locations">Locations</string>
+    <string name="location_edit">Edit location</string>
+    <string name="location_new">New location</string>
 </resources>
