--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,9 @@
     <string name="locations">Помещения</string>
     <string name="location_edit">Редактирование</string>
     <string name="location_new">Новое помещение</string>
+    <string name="location_delete_dialog_title">Удаление</string>
+    <string name="location_delete_dialog_message">Вы уверены, что хотите удалить</string>
+    <string name="location_delete_dialog_positive">Да</string>
+    <string name="location_delete_dialog_negative">Нет</string>
+    <string name="location_delete_toast">Помещение удалено</string>
 </resources>
