добавил вёрстку для списка счётчикофф

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,4 +37,5 @@
     <string name="meter_delete_dialog_positive">Да</string>
     <string name="meter_delete_dialog_negative">Нет</string>
     <string name="meter_delete_toast">Счетчик удален</string>
+    <string name="last_reading">Последнее показание:</string>
 </resources>
