--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="meter_delete_dialog_positive">Yes</string>
     <string name="meter_delete_dialog_negative">No</string>
     <string name="meter_delete_toast">Meter deleted</string>
+    <string name="last_reading">Last reading:</string>
 </resources>
