--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,5 @@
     <string name="meter_delete_dialog_negative">Нет</string>
     <string name="meter_delete_toast">Счетчик удален</string>
     <string name="last_reading">Последнее показание:</string>
+    <string name="meter_edited">Счётчик изменен</string>
 </resources>
