--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="meter_delete_dialog_negative">No</string>
     <string name="meter_delete_toast">Meter deleted</string>
     <string name="last_reading">Last reading:</string>
+    <string name="meter_edited">Meter edited</string>
 </resources>
