сделал экран показания

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -55,4 +55,6 @@
     <string name="last_reading_less_then_new_err">New value can\'t be less than last value</string>
     <string name="reading_edited">Показание изменено</string>
     <string name="reading_added">Показание добавлено</string>
+    <string name="reading_delete_dialog_message">Вы уверены что хотите удалить показание?</string>
+    <string name="reading_delete_toast">Показание удалено</string>
 </resources>
