--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="last_reading_less_then_new_err">New value can\'t be less than last value</string>
     <string name="reading_edited">Reading edited</string>
     <string name="reading_added">Reading added</string>
+    <string name="reading_delete_dialog_message">Are you sure you want to delete this reading?</string>
+    <string name="reading_delete_toast">Reading deleted</string>
 </resources>
